samples/_failures_safe/1761422414_1e2452_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d4a9a900.c: In function ‘main’:
./samples/SAFE/__tmp_d4a9a900.c:157:9: error: expected declaration or statement at end of input
  157 |         case STATE_PROCESSING:
      |         ^~~~
./samples/SAFE/__tmp_d4a9a900.c:157:9: error: expected declaration or statement at end of input
